Retire shared projection infra; add server review stores
Remove shared TaskDetailStore/projection contracts and test-framework projection helpers; introduce server-local review materialization and stores. Added PROJECTION_INFRASTRUCTURE_RETIREMENT_INVENTORY.md and updated roadmap/docs to refer to server-local review materialization (TaskReviewStore, InMemoryTaskReviewStore, JdbcTaskReviewStore, TaskReviewStoreMaterializer, TaskReviewStoreTaskReviewReadModel). Wire server to create review stores instead of using TaskDetailStore from storage runtime; remove SDK taskDetailStore plumbing and related projection enums/helpers. Clean up tests and storage implementations to stop implementing projection APIs and update integration/architecture guard tests and docs to reflect the new review/read-model boundary.