@@ -1,47 +1,35 @@
 package com.xa.mass.engine.listener;
 
 import com.xa.mass.base.enums.task.TaskWorkloadClass;
-import com.xa.mass.base.model.*;
+import com.xa.mass.base.model.Task;
+import com.xa.mass.base.model.TaskExecutionSpec;
+import com.xa.mass.base.model.TaskSharedConfig;
+import com.xa.mass.base.model.TaskShellCreateRequestDto;
+import com.xa.mass.base.model.Worker;
 import com.xa.mass.base.runtime.dispatch.TaskDispatchBinding;
 import com.xa.mass.engine.TaskCommandService;
-import com.xa.mass.engine.ProjectionAwareTaskManager;
+import com.xa.mass.engine.TaskManager;
 import com.xa.mass.engine.TaskQueryService;
 import com.xa.mass.engine.TestWorkerCandidateRows;
-import com.xa.mass.worker.runtime.WorkerManager;
-import com.xa.mass.worker.runtime.evidence.WorkerReachabilityState;
 import com.xa.mass.engine.model.WorkerSchedulingCandidate;
 import com.xa.mass.engine.model.WorkerSchedulingView;
 import com.xa.mass.engine.resource.WorkerDispatchResourcePolicy;
 import com.xa.mass.engine.resource.WorkerDispatchResourceUsage;
-import com.xa.mass.base.model.TaskShellCreateRequestDto;
 import com.xa.mass.engine.service.AssignmentRecordService;
-import com.xa.mass.storage.api.TaskDetailStore;
-import com.xa.mass.storage.api.projection.TaskMessageAttemptProjectionFinalReason;
-import com.xa.mass.storage.api.projection.TaskMessageAttemptProjectionStatus;
-import com.xa.mass.storage.api.projection.TaskMessageProjectionStatus;
-import com.xa.mass.storage.memory.InMemoryTaskShellStore;
-import com.xa.mass.engine.util.TraceEventLogCapture;
-import com.xa.mass.engine.util.TraceEventLogger;
 import com.xa.mass.runtime.api.ActiveLeaseRecord;
+import com.xa.mass.runtime.memory.InMemoryTaskResultRuntime;
 import com.xa.mass.runtime.memory.InMemoryTaskWorkRuntime;
+import com.xa.mass.storage.memory.InMemoryTaskShellStore;
+import com.xa.mass.worker.runtime.WorkerManager;
+import com.xa.mass.worker.runtime.evidence.WorkerReachabilityState;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
 import java.time.Duration;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.HashSet;
 import java.util.List;
-import java.util.Optional;
-import java.util.Set;
-import java.util.concurrent.CountDownLatch;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
-import java.util.concurrent.Future;
-import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
@@ -49,13 +37,12 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
-@Tag("secondary-proof")
 public class SimpleTaskDispatchBinderTest {
 
     private WorkerManager workerManager;
     private AssignmentRecordService recordService;
-    private InMemoryTaskShellStore taskStorage;
-    private ProjectionAwareTaskManager taskManager;
+    private InMemoryTaskWorkRuntime taskWorkRuntime;
+    private TaskManager taskManager;
     private TaskCommandService taskCommands;
     private TaskQueryService taskQueries;
     private SimpleTaskDispatchBinder listener;
@@ -64,20 +51,24 @@ public class SimpleTaskDispatchBinderTest {
     void setUp() {
         workerManager = mock(WorkerManager.class);
         recordService = mock(AssignmentRecordService.class);
-        taskStorage = new InMemoryTaskShellStore();
-        taskManager = new ProjectionAwareTaskManager(taskStorage, taskStorage, new InMemoryTaskWorkRuntime());
+        taskWorkRuntime = new InMemoryTaskWorkRuntime();
+        taskManager = new TaskManager(
+                new InMemoryTaskShellStore(),
+                taskWorkRuntime,
+                new InMemoryTaskResultRuntime(),
+                null
+        );
         taskCommands = new TaskCommandService(taskManager);
         taskQueries = new TaskQueryService(taskManager);
-        listener = newAssignmentListener(taskManager);
+        when(workerManager.confirmWorkerReservation(anyString(), anyString())).thenReturn(true);
+        when(workerManager.hasWorkerExclusiveLease(anyString())).thenReturn(true);
+        listener = newAssignmentListener();
     }
 
     @Test
-    void usesPersistedTaskMessagesInsteadOfGeneratingNewOnes() {
+    void dispatchUsesRuntimeReadyWorkInsteadOfProjectionRows() {
         Task task = createTask(3);
         task.getExecutionSpec().setBatchSize(10);
-        List<String> storedMsgIds = storedMessages(task.getTid()).stream()
-                .map(TaskDetailStore.TaskMessageProjection::messageId)
-                .collect(Collectors.toList());
         AtomicReference<List<TaskDispatchBinding>> dispatched = new AtomicReference<>();
         listener = new SimpleTaskDispatchBinder(
                 taskManager,
@@ -86,60 +77,15 @@ public class SimpleTaskDispatchBinderTest {
                 (t, bindings) -> dispatched.set(bindings)
         );
 
-
-        listener.bindDispatches(task, List.of(matched("d1", "tk1"), matched("d2", "tk2")));
+        listener.bindDispatches(task, List.of(matched("d1"), matched("d2")));
 
         List<TaskDispatchBinding> pushed = dispatched.get();
         assertNotNull(pushed);
-        assertEquals(storedMsgIds, pushed.stream().map(TaskDispatchBinding::messageId).collect(Collectors.toList()));
+        assertEquals(3, pushed.size());
         assertEquals(List.of("target-0", "target-1", "target-2"),
                 pushed.stream().map(binding -> binding.payload().get("target")).collect(Collectors.toList()));
-        assertTrue(pushed.stream().allMatch(binding -> binding.workerId() != null));
-    }
-
-    @Test
-    void assignmentExposesAssignedViewThroughQueryWithoutRestampingStoredMessages() {
-        Task task = createTask(4);
-        task.getExecutionSpec().setBatchSize(10);
-
-        listener.bindDispatches(task, List.of(matched("d1"), matched("d2")));
-
-        List<TaskDetailStore.TaskMessageProjection> stored = storedMessages(task.getTid());
-        List<TaskDetailStore.TaskMessageProjection> projected = projectedMessages(task.getTid());
-        assertEquals(4, projected.size());
-        assertTrue(stored.stream().allMatch(msg -> msg.status() == TaskMessageProjectionStatus.INIT));
-        assertTrue(stored.stream().allMatch(msg -> msg.latestAttemptWorkerId() == null));
-        assertEquals(List.of(
-                        TaskMessageProjectionStatus.ASSIGNED,
-                        TaskMessageProjectionStatus.ASSIGNED,
-                        TaskMessageProjectionStatus.ASSIGNED,
-                        TaskMessageProjectionStatus.ASSIGNED),
-                projected.stream().map(TaskDetailStore.TaskMessageProjection::status).collect(Collectors.toList()));
-        assertEquals(List.of("d1", "d2", "d1", "d2"),
-                projected.stream().map(TaskDetailStore.TaskMessageProjection::latestAttemptWorkerId).collect(Collectors.toList()));
-        List<String> batchIds = projected.stream().map(TaskDetailStore.TaskMessageProjection::latestAttemptBatchId).collect(Collectors.toList());
-        assertTrue(batchIds.stream().allMatch(id -> id != null && !id.isBlank()));
-        assertEquals(batchIds.get(0), batchIds.get(2));
-        assertEquals(batchIds.get(1), batchIds.get(3));
-        assertNotEquals(batchIds.get(0), batchIds.get(1));
-        assertTrue(projected.stream().allMatch(msg -> msg.assignedTime() != null));
-        List<TaskDetailStore.TaskMessageAttemptProjection> attempts = stored.stream()
-                .map(msg -> latestActiveAttemptProjection(task.getTid(), msg.messageId()))
-                .collect(Collectors.toList());
-        assertEquals(4, attempts.size());
-        assertTrue(stored.stream().allMatch(msg -> taskStorage.getTaskMessageAttemptProjections(task.getTid(), msg.messageId()).isEmpty()));
-        assertTrue(attempts.stream().allMatch(attempt -> attempt.attemptNo() == 1));
-        assertTrue(attempts.stream().allMatch(attempt -> attempt.status() == TaskMessageAttemptProjectionStatus.DISPATCHED));
-        assertTrue(attempts.stream().allMatch(attempt -> attempt.workerId() != null));
-        assertTrue(attempts.stream().allMatch(attempt -> attempt.batchId() != null && !attempt.batchId().isBlank()));
-        assertTrue(stored.stream()
-                .map(msg -> activeLease(task.getTid(), msg.messageId()))
-                .allMatch(lease -> lease != null && lease.leasedAt() != null && lease.leaseExpireAt() != null));
-
-        verify(recordService, times(4)).recordMessageAssignment(
-                any(), any(), anyString(), anyString(), any(), anyString(), anyBoolean()
-        );
-        verify(workerManager, times(4)).hasWorkerExclusiveLease(anyString());
+        assertEquals(0, taskWorkRuntime.stats(task.getTid()).readyCount());
+        assertEquals(3, taskWorkRuntime.stats(task.getTid()).inflightCount());
     }
 
     @Test
@@ -149,14 +95,14 @@ public class SimpleTaskDispatchBinderTest {
         task.getExecutionSpec().setBatchSize(1);
 
         LocalDateTime beforeAssign = LocalDateTime.now();
-        listener.bindDispatches(task, List.of(matched("d1")));
+        List<TaskDispatchBinding> dispatched = listener.bindDispatches(task, List.of(matched("d1")));
         LocalDateTime afterAssign = LocalDateTime.now();
 
-        TaskDetailStore.TaskMessageProjection message = storedMessages(task.getTid()).get(0);
-        TaskDetailStore.TaskMessageAttemptProjection attempt = latestActiveAttemptProjection(task.getTid(), message.messageId());
-        ActiveLeaseRecord activeLease = activeLease(task.getTid(), message.messageId());
+        assertEquals(1, dispatched.size());
+        ActiveLeaseRecord activeLease = taskWorkRuntime
+                .getActiveLease(task.getTid(), dispatched.getFirst().messageId())
+                .orElse(null);
 
-        assertNotNull(attempt);
         assertNotNull(activeLease);
         assertNotNull(activeLease.leaseExpireAt());
         LocalDateTime leaseExpireTime = LocalDateTime.ofInstant(activeLease.leaseExpireAt(), java.time.ZoneId.systemDefault());
@@ -164,34 +110,6 @@ public class SimpleTaskDispatchBinderTest {
         long upperBound = Duration.between(afterAssign, leaseExpireTime).getSeconds();
         assertTrue(lowerBound >= 1, "lease should be at least about 2 seconds after assignment start");
         assertTrue(upperBound <= 2, "lease should stay close to configured 2-second window");
-    }
-
-    @Test
-    void successfulRuntimeClaimRecordsObservedWorkerLoad() {
-        Task task = createTask(3);
-        task.getExecutionSpec().setBatchSize(10);
-
-        List<TaskDispatchBinding> dispatched = listener.bindDispatches(
-                task,
-                List.of(matched("d1"), matched("d2"))
-        );
-
-        assertEquals(3, dispatched.size());
-        verify(workerManager, times(2)).recordWorkClaimed("d1", task.getTid());
-        verify(workerManager, times(1)).recordWorkClaimed("d2", task.getTid());
-    }
-
-    @Test
-    void successfulRuntimeClaimConfirmsReservationBeforeFallbackLoadClaim() {
-        Task task = createTask(2);
-        task.getExecutionSpec().setBatchSize(2);
-        when(workerManager.confirmWorkerReservation("d1", task.getTid())).thenReturn(true, false);
-
-        List<TaskDispatchBinding> dispatched = listener.bindDispatches(task, List.of(matched("d1")));
-
-        assertEquals(2, dispatched.size());
-        verify(workerManager, times(2)).confirmWorkerReservation("d1", task.getTid());
-        verify(workerManager, times(1)).recordWorkClaimed("d1", task.getTid());
     }
 
     @Test
@@ -210,72 +128,6 @@ public class SimpleTaskDispatchBinderTest {
     }
 
     @Test
-    void dispatchSubmitFailureReleasesObservedWorkerLoadAfterCompensation() {
-        Task task = createTask(2);
-        task.getExecutionSpec().setBatchSize(2);
-
-        listener = new SimpleTaskDispatchBinder(
-                taskManager,
-                workerManager,
-                recordService,
-                (t, bindings) -> {
-                    throw new IllegalStateException("handoff queue unavailable");
-                }
-        );
-
-        List<TaskDispatchBinding> dispatched = listener.bindDispatches(task, List.of(matched("d1")));
-
-        assertTrue(dispatched.isEmpty());
-        verify(workerManager, times(2)).recordWorkClaimed("d1", task.getTid());
-        verify(workerManager, times(2)).recordWorkFinal("d1", task.getTid());
-        verify(workerManager).releaseWorkerExclusiveLease("d1");
-    }
-
-    @Test
-    void backgroundDispatchSubmitFailureReleasesObservedLoadWithoutUnlockingWorker() {
-        Task task = createTask(1);
-        task.getExecutionSpec().setForeground(false);
-
-        listener = new SimpleTaskDispatchBinder(
-                taskManager,
-                workerManager,
-                recordService,
-                (t, bindings) -> {
-                    throw new IllegalStateException("handoff queue unavailable");
-                }
-        );
-
-        List<TaskDispatchBinding> dispatched = listener.bindDispatches(task, List.of(matched(worker("d1"))));
-
-        assertTrue(dispatched.isEmpty());
-        verify(workerManager).recordWorkClaimed("d1", task.getTid());
-        verify(workerManager).recordWorkFinal("d1", task.getTid());
-        verify(workerManager, never()).releaseWorkerExclusiveLease("d1");
-    }
-
-    @Test
-    void backgroundContextDispatchSubmitFailureReleasesObservedLoadWithoutContextDrivenUnlock() {
-        Task task = createTask(1);
-        task.getExecutionSpec().setForeground(false);
-
-        listener = new SimpleTaskDispatchBinder(
-                taskManager,
-                workerManager,
-                recordService,
-                (t, bindings) -> {
-                    throw new IllegalStateException("handoff queue unavailable");
-                }
-        );
-
-        List<TaskDispatchBinding> dispatched = listener.bindDispatches(task, List.of(matched("d1")));
-
-        assertTrue(dispatched.isEmpty());
-        verify(workerManager).recordWorkClaimed("d1", task.getTid());
-        verify(workerManager).recordWorkFinal("d1", task.getTid());
-        verify(workerManager, never()).releaseWorkerExclusiveLease("d1");
-    }
-
-    @Test
     void interactiveWorkloadUsesSmallPerWorkerClaimWindow() {
         Task task = createTask(5);
         task.getExecutionSpec().setBatchSize(4);
@@ -284,361 +136,8 @@ public class SimpleTaskDispatchBinderTest {
         List<TaskDispatchBinding> dispatched = listener.bindDispatches(task, List.of(matched("d1"), matched("d2")));
 
         assertEquals(2, dispatched.size());
-        List<TaskDetailStore.TaskMessageProjection> stored = projectedMessages(task.getTid());
-        assertEquals(List.of(
-                        TaskMessageProjectionStatus.ASSIGNED,
-                        TaskMessageProjectionStatus.ASSIGNED,
-                        TaskMessageProjectionStatus.INIT,
-                        TaskMessageProjectionStatus.INIT,
-                        TaskMessageProjectionStatus.INIT),
-                stored.stream().map(TaskDetailStore.TaskMessageProjection::status).collect(Collectors.toList()));
-        assertEquals(java.util.Arrays.asList("d1", "d2", null, null, null),
-                stored.stream().map(TaskDetailStore.TaskMessageProjection::latestAttemptWorkerId).collect(Collectors.toList()));
-    }
-
-    @Test
-    void interactiveWorkloadCapsLeaseWindowToShortProfile() {
-        taskManager.setWorkLeaseSeconds(120L);
-        Task task = createTask(1);
-        task.getExecutionSpec().setBatchSize(3);
-        task.getExecutionSpec().setWorkloadClass(TaskWorkloadClass.INTERACTIVE);
-
-        LocalDateTime beforeAssign = LocalDateTime.now();
-        listener.bindDispatches(task, List.of(matched("d1")));
-        LocalDateTime afterAssign = LocalDateTime.now();
-
-        TaskDetailStore.TaskMessageProjection message = storedMessages(task.getTid()).get(0);
-        TaskDetailStore.TaskMessageAttemptProjection attempt = latestActiveAttemptProjection(task.getTid(), message.messageId());
-        ActiveLeaseRecord activeLease = activeLease(task.getTid(), message.messageId());
-
-        assertNotNull(attempt);
-        assertNotNull(activeLease);
-        assertNotNull(activeLease.leaseExpireAt());
-        LocalDateTime leaseExpireTime = LocalDateTime.ofInstant(activeLease.leaseExpireAt(), java.time.ZoneId.systemDefault());
-        long lowerBound = Duration.between(beforeAssign, leaseExpireTime).getSeconds();
-        long upperBound = Duration.between(afterAssign, leaseExpireTime).getSeconds();
-        assertTrue(lowerBound >= 29, "interactive short lease should stay close to 30 seconds");
-        assertTrue(upperBound <= 30, "interactive short lease should be capped by the short lease profile");
-    }
-
-    @Test
-    void assignmentDoesNotReadLatestAttemptToAllocateDispatchAttemptNo() {
-        TrackingLatestAttemptStorage trackingStorage = new TrackingLatestAttemptStorage();
-        taskManager = new ProjectionAwareTaskManager(trackingStorage, trackingStorage, new InMemoryTaskWorkRuntime());
-        taskCommands = new TaskCommandService(taskManager);
-        taskQueries = new TaskQueryService(taskManager);
-        listener = newAssignmentListener(taskManager);
-
-        Task task = createTask(3);
-        task.getExecutionSpec().setBatchSize(2);
-
-        List<TaskDispatchBinding> dispatched = listener.bindDispatches(task, List.of(matched("d1"), matched("d2")));
-
-        assertEquals(3, dispatched.size());
-        assertEquals(0, trackingStorage.latestAttemptReadCount.get(),
-                "dispatch should allocate attempt numbers from runtime retry truth without reading latest attempt rows");
-    }
-
-    @Test
-    void dispatchPayloadUsesRuntimeClaimInsteadOfProjectionInput() {
-        ProjectionPayloadScrubbingStorage scrubbingStorage = new ProjectionPayloadScrubbingStorage();
-        taskManager = new ProjectionAwareTaskManager(scrubbingStorage, scrubbingStorage, new InMemoryTaskWorkRuntime());
-        taskCommands = new TaskCommandService(taskManager);
-        taskQueries = new TaskQueryService(taskManager);
-        listener = newAssignmentListener(taskManager);
-
-        Task task = createTask(1);
-        task.getExecutionSpec().setBatchSize(1);
-
-        AtomicReference<List<TaskDispatchBinding>> dispatched = new AtomicReference<>();
-        listener = new SimpleTaskDispatchBinder(
-                taskManager,
-                workerManager,
-                recordService,
-                (t, bindings) -> dispatched.set(bindings)
-        );
-
-        listener.bindDispatches(task, List.of(matched("d1")));
-
-        List<TaskDispatchBinding> bindings = dispatched.get();
-        assertNotNull(bindings);
-        assertEquals(1, bindings.size());
-        assertEquals("target-0", bindings.get(0).payload().get("target"));
-    }
-
-    @Test
-    void dispatchDoesNotReadTaskMessageProjectionOnHotPath() {
-        TrackingTaskMessageReadStorage trackingStorage = new TrackingTaskMessageReadStorage();
-        taskManager = new ProjectionAwareTaskManager(trackingStorage, trackingStorage, new InMemoryTaskWorkRuntime());
-        taskCommands = new TaskCommandService(taskManager);
-        taskQueries = new TaskQueryService(taskManager);
-        listener = newAssignmentListener(taskManager);
-
-        Task task = createTask(3);
-        task.getExecutionSpec().setBatchSize(3);
-
-        List<TaskDispatchBinding> dispatched = listener.bindDispatches(task, List.of(matched("d1")));
-
-        assertEquals(3, dispatched.size());
-        assertEquals(0, trackingStorage.taskMessageReadCount.get(),
-                "dispatch should synchronize compatibility status without reading message projection first");
-    }
-
-    @Test
-    void dispatchContinuesWhenCompatibilityAttemptProjectionWriteFails() {
-        FailingAddAttemptStorage failingStorage = new FailingAddAttemptStorage();
-        taskStorage = failingStorage;
-        taskManager = new ProjectionAwareTaskManager(failingStorage, failingStorage, new InMemoryTaskWorkRuntime());
-        taskCommands = new TaskCommandService(taskManager);
-        taskQueries = new TaskQueryService(taskManager);
-        listener = newAssignmentListener(taskManager);
-
-        Task task = createTask(1);
-        task.getExecutionSpec().setBatchSize(1);
-
-        List<TaskDispatchBinding> dispatched = listener.bindDispatches(task, List.of(matched("d1")));
-
-        assertEquals(1, dispatched.size());
-        TaskDetailStore.TaskMessageProjection stored = storedMessages(task.getTid()).get(0);
-        TaskDetailStore.TaskMessageProjection visible = taskMessageProjection(task.getTid(), stored.messageId());
-        assertEquals(TaskMessageProjectionStatus.INIT, stored.status());
-        assertEquals(TaskMessageProjectionStatus.ASSIGNED, visible.status());
-        assertEquals("d1", visible.latestAttemptWorkerId());
-        assertTrue(failingStorage.getTaskMessageAttemptProjections(task.getTid(), stored.messageId()).isEmpty());
-    }
-
-    @Test
-    void dispatchSubmitFailureCompensatesRuntimeProjectionAndWorkerLockForRetry() {
-        Task task = createTask(2);
-        task.getExecutionSpec().setBatchSize(2);
-
-        listener = new SimpleTaskDispatchBinder(
-                taskManager,
-                workerManager,
-                recordService,
-                (t, bindings) -> {
-                    throw new IllegalStateException("handoff queue unavailable");
-                }
-        );
-
-        List<TaskDispatchBinding> dispatched = listener.bindDispatches(task, List.of(matched("d1")));
-
-        assertTrue(dispatched.isEmpty());
-        List<TaskDetailStore.TaskMessageProjection> stored = projectedMessages(task.getTid());
-        assertEquals(List.of(TaskMessageProjectionStatus.INIT, TaskMessageProjectionStatus.INIT),
-                stored.stream().map(TaskDetailStore.TaskMessageProjection::status).collect(Collectors.toList()));
-        assertTrue(stored.stream().allMatch(msg -> msg.retryCount() == 1));
-        assertTrue(stored.stream().allMatch(msg -> msg.latestAttemptId() == null));
-        assertTrue(stored.stream().allMatch(msg -> msg.latestAttemptWorkerId() == null));
-        assertTrue(stored.stream().allMatch(msg -> msg.latestAttemptBatchId() == null));
-
-        List<TaskDetailStore.TaskMessageAttemptProjection> attempts = stored.stream()
-                .map(msg -> awaitLatestAttemptProjection(task.getTid(), msg.messageId(),
-                        TaskMessageAttemptProjectionStatus.REVOKED))
-                .collect(Collectors.toList());
-        assertTrue(attempts.stream().allMatch(attempt -> attempt.status() == TaskMessageAttemptProjectionStatus.REVOKED));
-        assertTrue(attempts.stream().allMatch(attempt -> attempt.finalReason()
-                == TaskMessageAttemptProjectionFinalReason.REVOKED_FOR_RETRY));
-        assertTrue(attempts.stream().allMatch(attempt -> "DISPATCH_SUBMIT_FAILED".equals(attempt.errorCode())));
-        verify(workerManager).releaseWorkerExclusiveLease("d1");
-        assertEquals(2, taskManager.countDispatchReadyWork(task.getTid()));
-
-        AtomicReference<List<TaskDispatchBinding>> recoveredDispatch = new AtomicReference<>();
-        listener = new SimpleTaskDispatchBinder(
-                taskManager,
-                workerManager,
-                recordService,
-                (t, bindings) -> recoveredDispatch.set(bindings)
-        );
-        listener.bindDispatches(task, List.of(matched("d1")));
-
-        List<TaskDispatchBinding> retryDispatch = recoveredDispatch.get();
-        assertNotNull(retryDispatch);
-        assertEquals(2, retryDispatch.size());
-    }
-
-    @Test
-    void assignmentEmitsAttemptTraceWithoutWorkerContextPayload() {
-        Task task = createTask(1);
-        task.getExecutionSpec().setBatchSize(1);
-
-        try (TraceEventLogCapture capture = new TraceEventLogCapture()) {
-            listener.bindDispatches(task, List.of(matched("d1")));
-
-            capture.assertHasEvent("TASK_WORK_ATTEMPT_STATUS_TRANSITION", mdc ->
-                    task.getTid().equals(mdc.get("taskId"))
-                            && "CREATED".equals(mdc.get("fromStatus"))
-                            && "LEASED".equals(mdc.get("toStatus"))
-                            && "d1".equals(mdc.get("workerId"))
-                            && !mdc.containsKey("workerContextId"));
-            capture.assertHasEvent("TASK_WORK_ATTEMPT_STATUS_TRANSITION", mdc ->
-                    task.getTid().equals(mdc.get("taskId"))
-                            && "LEASED".equals(mdc.get("fromStatus"))
-                            && "DISPATCHED".equals(mdc.get("toStatus"))
-                            && "d1".equals(mdc.get("workerId"))
-                            && !mdc.containsKey("workerContextId"));
-        }
-    }
-
-    @Test
-    void assignmentEmitsDispatchBindingSummary() {
-        Task task = createTask(3);
-        task.getExecutionSpec().setBatchSize(2);
-
-        try (TraceEventLogCapture capture = new TraceEventLogCapture()) {
-            List<TaskDispatchBinding> dispatched = listener.bindDispatches(task, List.of(matched("d1"), matched("d2")));
-            assertEquals(3, dispatched.size());
-            capture.assertHasEvent("DISPATCH_BINDING_SUMMARY", mdc ->
-                    task.getTid().equals(mdc.get("taskId"))
-                            && "3".equals(mdc.get("pendingMessageCount"))
-                            && "2".equals(mdc.get("matchedWorkerCount"))
-                            && "2".equals(mdc.get("dispatchSlotCount"))
-                            && "3".equals(mdc.get("dispatchedMessageCount"))
-                            && "2".equals(mdc.get("uniqueWorkerCount"))
-                            && "2".equals(mdc.get("perWorkerBatchLimit"))
-                            && "0".equals(mdc.get("unassignedMessageCount"))
-                            && "SUCCESS".equals(mdc.get("result")));
-        }
-    }
-
-    @Test
-    void dispatchBindingCarriesInternalGroupAndNodeEvidence() {
-        Task task = createTask(1);
-
-        List<TaskDispatchBinding> dispatched = listener.bindDispatches(
-                task,
-                List.of(matched(worker("d1", "node-a", "group-a")))
-        );
-
-        assertEquals(1, dispatched.size());
-        TaskDispatchBinding binding = dispatched.getFirst();
-        assertEquals("group-a", binding.workerGroupId());
-        assertEquals("node-a", binding.adapterNodeId());
-        assertEquals("GROUP_SELECTOR", binding.workerCandidateSource());
-    }
-
-    @Test
-    void assignmentRespectsPerWorkerBatchSizeAndLeavesRemainingMessagesPending() {
-        Task task = createTask(5);
-        task.getExecutionSpec().setBatchSize(2);
-
-        List<TaskDispatchBinding> dispatched = listener.bindDispatches(task, List.of(matched("d1"), matched("d2")));
-
-        assertEquals(4, dispatched.size());
-        List<TaskDetailStore.TaskMessageProjection> stored = projectedMessages(task.getTid());
-        assertEquals(List.of(
-                        TaskMessageProjectionStatus.ASSIGNED,
-                        TaskMessageProjectionStatus.ASSIGNED,
-                        TaskMessageProjectionStatus.ASSIGNED,
-                        TaskMessageProjectionStatus.ASSIGNED,
-                        TaskMessageProjectionStatus.INIT),
-                stored.stream().map(TaskDetailStore.TaskMessageProjection::status).collect(Collectors.toList()));
-        assertEquals(java.util.Arrays.asList("d1", "d2", "d1", "d2", null),
-                stored.stream().map(TaskDetailStore.TaskMessageProjection::latestAttemptWorkerId).collect(Collectors.toList()));
-    }
-
-    @Test
-    void concurrentAssignmentRoundsClaimEachReadyMessageAtMostOnce() throws Exception {
-        Task task = createTask(6);
-        task.getExecutionSpec().setBatchSize(6);
-        List<WorkerSchedulingCandidate> candidates = List.of(matched("d1"), matched("d2"), matched("d3"));
-        CountDownLatch start = new CountDownLatch(1);
-        ExecutorService executor = Executors.newFixedThreadPool(2);
-        try {
-            List<Future<List<TaskDispatchBinding>>> futures = List.of(
-                    executor.submit(() -> {
-                        start.await(2, TimeUnit.SECONDS);
-                        return listener.bindDispatches(task, candidates);
-                    }),
-                    executor.submit(() -> {
-                        start.await(2, TimeUnit.SECONDS);
-                        return listener.bindDispatches(task, candidates);
-                    })
-            );
-
-            start.countDown();
-
-            List<TaskDispatchBinding> dispatched = new ArrayList<>();
-            for (Future<List<TaskDispatchBinding>> future : futures) {
-                dispatched.addAll(future.get(5, TimeUnit.SECONDS));
-            }
-
-            assertEquals(6, dispatched.size());
-            Set<String> messageIds = dispatched.stream()
-                    .map(TaskDispatchBinding::messageId)
-                    .collect(Collectors.toCollection(HashSet::new));
-            assertEquals(6, messageIds.size(), "concurrent assignment rounds must not duplicate a claimed message");
-            assertEquals(0, taskManager.countDispatchReadyWork(task.getTid()));
-            assertTrue(projectedMessages(task.getTid()).stream()
-                    .allMatch(msg -> msg.status() == TaskMessageProjectionStatus.ASSIGNED));
-        } finally {
-            executor.shutdownNow();
-        }
-    }
-
-    @Test
-    void singleWorkerDoesNotExceedBatchSizeWithinOneDispatchRound() {
-        Task task = createTask(4);
-        task.getExecutionSpec().setBatchSize(2);
-
-        List<TaskDispatchBinding> dispatched = listener.bindDispatches(task, List.of(matched("d1")));
-
-        assertEquals(2, dispatched.size());
-        List<TaskDetailStore.TaskMessageProjection> stored = projectedMessages(task.getTid());
-        assertEquals(List.of(
-                        TaskMessageProjectionStatus.ASSIGNED,
-                        TaskMessageProjectionStatus.ASSIGNED,
-                        TaskMessageProjectionStatus.INIT,
-                        TaskMessageProjectionStatus.INIT),
-                stored.stream().map(TaskDetailStore.TaskMessageProjection::status).collect(Collectors.toList()));
-        assertEquals(java.util.Arrays.asList("d1", "d1", null, null),
-                stored.stream().map(TaskDetailStore.TaskMessageProjection::latestAttemptWorkerId).collect(Collectors.toList()));
-    }
-
-    @Test
-    void finalDispatchRoundCanUseLessThanBatchSizeWhenFewerMessagesRemain() {
-        Task task = createTask(3);
-        task.getExecutionSpec().setBatchSize(2);
-
-        List<TaskDispatchBinding> dispatched = listener.bindDispatches(task, List.of(matched("d1"), matched("d2")));
-
-        assertEquals(3, dispatched.size());
-        List<TaskDetailStore.TaskMessageProjection> stored = projectedMessages(task.getTid());
-        assertEquals(List.of(
-                        TaskMessageProjectionStatus.ASSIGNED,
-                        TaskMessageProjectionStatus.ASSIGNED,
-                        TaskMessageProjectionStatus.ASSIGNED),
-                stored.stream().map(TaskDetailStore.TaskMessageProjection::status).collect(Collectors.toList()));
-        assertEquals(java.util.Arrays.asList("d1", "d2", "d1"),
-                stored.stream().map(TaskDetailStore.TaskMessageProjection::latestAttemptWorkerId).collect(Collectors.toList()));
-    }
-
-    @Test
-    void workerLevelCandidateIsHandledGracefully() {
-        Task task = createTask(2);
-        task.getExecutionSpec().setBatchSize(10);
-        assertDoesNotThrow(() -> listener.bindDispatches(task, List.of(matched(worker("d1")))));
-
-        List<TaskDetailStore.TaskMessageProjection> stored = projectedMessages(task.getTid());
-        assertTrue(stored.stream().allMatch(msg -> msg.latestAttemptBatchId() != null && !msg.latestAttemptBatchId().isBlank()));
-        verify(recordService, times(2)).recordMessageAssignment(
-                any(), argThat(candidate -> candidate != null && candidate.getWorkerId() != null),
-                anyString(), anyString(), any(), anyString(), anyBoolean()
-        );
-        verify(workerManager, times(2)).hasWorkerExclusiveLease("d1");
-    }
-
-    @Test
-    void binderUsesWorkerLevelAttemptIdentityAsDispatchGate() {
-        Task task = createTask(1);
-        List<TaskDispatchBinding> dispatched = listener.bindDispatches(task, List.of(matched("d1")));
-
-        List<TaskDetailStore.TaskMessageProjection> stored = storedMessages(task.getTid());
-        assertEquals(1, dispatched.size());
-        assertEquals(TaskMessageProjectionStatus.INIT, stored.get(0).status());
-        assertFalse(dispatched.getFirst().attemptId().contains("-na-"));
-        verify(workerManager, never()).releaseWorkerReservation("d1", task.getTid());
-        verify(workerManager, never()).releaseWorkerExclusiveLease("d1");
+        assertEquals(3, taskWorkRuntime.stats(task.getTid()).readyCount());
+        assertEquals(2, taskWorkRuntime.stats(task.getTid()).inflightCount());
     }
 
     @Test
@@ -649,7 +148,7 @@ public class SimpleTaskDispatchBinderTest {
                 workerManager,
                 recordService,
                 null,
-                TraceEventLogger.noop(),
+                com.xa.mass.engine.util.TraceEventLogger.noop(),
                 new NonExclusiveResourcePolicy()
         );
 
@@ -657,21 +156,6 @@ public class SimpleTaskDispatchBinderTest {
 
         assertEquals(1, dispatched.size());
         verify(workerManager, never()).releaseWorkerExclusiveLease("d1");
-    }
-
-    @Test
-    void emptyWorkerListSkipsWithoutMutation() {
-        Task task = createTask(2);
-        List<String> before = storedMessages(task.getTid()).stream()
-                .map(TaskDetailStore.TaskMessageProjection::messageId)
-                .collect(Collectors.toList());
-
-        assertTrue(listener.bindDispatches(task, List.of()).isEmpty());
-
-        List<TaskDetailStore.TaskMessageProjection> after = storedMessages(task.getTid());
-        assertEquals(before, after.stream().map(TaskDetailStore.TaskMessageProjection::messageId).collect(Collectors.toList()));
-        assertTrue(after.stream().allMatch(msg -> msg.status() == TaskMessageProjectionStatus.INIT));
-        verifyNoInteractions(recordService);
     }
 
     private Task createTask(int messageCount) {
@@ -696,77 +180,14 @@ public class SimpleTaskDispatchBinderTest {
         return taskQueries.getTask(task.getTid());
     }
 
-    private List<TaskDetailStore.TaskMessageProjection> storedMessages(String taskId) {
-        long count = taskStorage.getTaskMessageStats(taskId).getTotal();
-        if (count == 0) {
-            return List.of();
-        }
-        return taskStorage.getTaskMessageProjections(taskId, Math.toIntExact(count));
-    }
-
-    private List<TaskDetailStore.TaskMessageProjection> projectedMessages(String taskId) {
-        return storedMessages(taskId).stream()
-                .map(msg -> taskMessageProjection(taskId, msg.messageId()))
-                .collect(Collectors.toList());
-    }
-
-    private TaskDetailStore.TaskMessageProjection taskMessageProjection(String taskId, String messageId) {
-        return taskManager.getVisibleTaskMessageProjection(taskId, messageId);
-    }
-
-    private TaskDetailStore.TaskMessageAttemptProjection awaitLatestAttemptProjection(String taskId,
-                                                                                      String messageId,
-                                                                                      TaskMessageAttemptProjectionStatus expectedStatus) {
-        long deadlineNanos = System.nanoTime() + TimeUnit.SECONDS.toNanos(2);
-        TaskDetailStore.TaskMessageAttemptProjection lastSeen = null;
-        while (System.nanoTime() < deadlineNanos) {
-            lastSeen = taskStorage.getLatestTaskMessageAttemptProjection(taskId, messageId).orElse(null);
-            if (lastSeen != null && lastSeen.status() == expectedStatus) {
-                return lastSeen;
-            }
-            sleepBriefly();
-        }
-        return lastSeen;
-    }
-
-    private static void sleepBriefly() {
-        try {
-            Thread.sleep(10L);
-        } catch (InterruptedException e) {
-            Thread.currentThread().interrupt();
-        }
-    }
-
-    private TaskDetailStore.TaskMessageAttemptProjection latestActiveAttemptProjection(String taskId, String messageId) {
-        return taskManager.getLatestActiveAttemptProjectionRecord(taskId, messageId);
-    }
-
-    private ActiveLeaseRecord activeLease(String taskId, String messageId) {
-        return taskManager.getActiveLeaseRecord(taskId, messageId);
-    }
-
     private Worker worker(String id) {
         Worker w = new Worker();
         w.setWorkerId(id);
         return w;
     }
 
-    private Worker worker(String id, String adapterNodeId, String workerGroupId) {
-        Worker worker = worker(id);
-        worker.setAdapterNodeId(adapterNodeId);
-        worker.setWorkerGroupId(workerGroupId);
-        return worker;
-    }
-
     private WorkerSchedulingCandidate matched(String workerId) {
-        return matched(worker(workerId));
-    }
-
-    private WorkerSchedulingCandidate matched(String workerId, String ignored) {
-        return matched(worker(workerId));
-    }
-
-    private WorkerSchedulingCandidate matched(Worker worker) {
+        Worker worker = worker(workerId);
         return new WorkerSchedulingCandidate(
                 TestWorkerCandidateRows.from(worker),
                 WorkerSchedulingView.from(TestWorkerCandidateRows.from(worker), WorkerReachabilityState.ONLINE,
@@ -774,70 +195,12 @@ public class SimpleTaskDispatchBinderTest {
         );
     }
 
-    private SimpleTaskDispatchBinder newAssignmentListener(ProjectionAwareTaskManager manager) {
+    private SimpleTaskDispatchBinder newAssignmentListener() {
         return new SimpleTaskDispatchBinder(
-                manager,
+                taskManager,
                 workerManager,
                 recordService
         );
-    }
-
-    private static final class TrackingLatestAttemptStorage extends InMemoryTaskShellStore {
-        private final AtomicInteger latestAttemptReadCount = new AtomicInteger();
-
-        @Override
-        public Optional<TaskDetailStore.TaskMessageAttemptProjection> getLatestTaskMessageAttemptProjection(String taskId,
-                                                                                                            String messageId) {
-            latestAttemptReadCount.incrementAndGet();
-            return super.getLatestTaskMessageAttemptProjection(taskId, messageId);
-        }
-    }
-
-    private static final class ProjectionPayloadScrubbingStorage extends InMemoryTaskShellStore {
-        @Override
-        public Optional<TaskDetailStore.TaskMessageProjection> getTaskMessageProjection(String taskId, String messageId) {
-            return super.getTaskMessageProjection(taskId, messageId)
-                    .map(projection -> new TaskDetailStore.TaskMessageProjection(
-                            projection.messageId(),
-                            projection.taskId(),
-                            java.util.Map.of(),
-                            projection.payloadRef(),
-                            projection.status(),
-                            projection.assignedTime(),
-                            projection.createTime(),
-                            projection.updateTime(),
-                            projection.startTime(),
-                            projection.completeTime(),
-                            projection.retryCount(),
-                            projection.maxRetryCount(),
-                            projection.errorMessage(),
-                            projection.errorCode(),
-                            projection.finalReason(),
-                            projection.output(),
-                            projection.latestAttemptId(),
-                            projection.latestAttemptWorkerId(),
-                            projection.latestAttemptBatchId()
-                    ));
-        }
-    }
-
-    private static final class TrackingTaskMessageReadStorage extends InMemoryTaskShellStore {
-        private final AtomicInteger taskMessageReadCount = new AtomicInteger();
-
-        @Override
-        public Optional<TaskDetailStore.TaskMessageProjection> getTaskMessageProjection(String taskId, String messageId) {
-            taskMessageReadCount.incrementAndGet();
-            return super.getTaskMessageProjection(taskId, messageId);
-        }
-    }
-
-    private static final class FailingAddAttemptStorage extends InMemoryTaskShellStore {
-        @Override
-        public boolean upsertTaskMessageAttemptProjection(String taskId,
-                                                          String messageId,
-                                                          TaskDetailStore.TaskMessageAttemptProjection projection) {
-            throw new IllegalStateException("compatibility attempt projection unavailable");
-        }
     }
 
     private static final class NonExclusiveResourcePolicy implements WorkerDispatchResourcePolicy {
